--- a/translations/kangyur/translations/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/translations/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-065-154">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -191,6 +191,12 @@
                 </change>
                 <change who="#konchog" when="2023-11-17T14:52:14.904Z" type="text-version" status="1.0.1" xml:id="UT22084-091-065-160">
                     <desc>Made a couple minor fixes.</desc>
+                </change>
+                <change who="#celso" when="2023-11-21T23:26:28.648Z" type="text-version" status="1.0.2" xml:id="UT22084-091-065-161">
+                    <desc>Corrected links to rKTs</desc>
+                </change>
+                <change who="#andre" when="2023-11-29T07:39:37.213Z" type="text-version" status="1.0.3" xml:id="UT22084-091-065-162">
+                    <desc>glossary matching revised - activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -450,9 +456,9 @@
                                                 Unit, Central Institute of higher Tibetan Studies,
                                                 1993. </bibl>
                                         <bibl xml:id="UT22084-091-065-99">
-                        <title xml:lang="en">Resources for Kanjur &amp; Tenjur
+                        <title xml:lang="en">Resources for Kanjur and Tanjur
                                                 Studies</title>, Universität Wien, accessed June 11,
-                                                2019. <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php">https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php</ref>.</bibl>
+                                                2019. <ref target="http://www.rkts.org/">http://www.rkts.org/</ref>.</bibl>
                                         <bibl xml:id="UT22084-091-065-100">
                         <title xml:lang="en">The
                                                   Buddhist Canons Research Database</title>.
@@ -461,7 +467,7 @@
                                                 June 11, 2019. <ref target="http://databases.aibs.columbia.edu">http://databases.aibs.columbia.edu</ref>.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-065-104">
@@ -584,19 +590,15 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-091-065-127">
-                                                  <term type="translationMain">rākṣasa city of
-                                                  Laṅkāpūrī</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified" n="1">srin po lang ka pu ri’i grong khyer </term>
-                                                  <term xml:lang="bo" n="1">སྲིན་པོ་ལང་ཀ་པུ་རིའི་གྲོང་ཁྱེར།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified"/>
-                                                  <note type="definition">
-                                <p>The name of the city of
-                                                  Laṅkā, which is mythologized as the ancient
-                                                  capital of Śrī Laṅkā. See <ptr target="#UT22084-091-065-108"/> for a definition
-                                                  of rākṣasa.</p>
+                        <gloss xml:id="UT22084-091-065-127" type="place" mode="match">
+                            <term type="translationMain">Laṅkāpūrī</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">laṅkāpūrī</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lang ka pu ri</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལང་ཀ་པུ་རི།</term>
+                            <note type="definition">
+                                <p>The name of the city of Laṅkā, which is mythologized as the ancient capital of Śrī Laṅkā.</p>
                             </note>
-                                                </gloss>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-091-065-128">
