--- a/translations/kangyur/translations/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
+++ b/translations/kangyur/translations/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-066-137">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -184,6 +184,12 @@
                 </change>
                 <change who="#konchog" when="2023-11-17T14:59:19.048Z" type="text-version" status="1.0.1" xml:id="UT22084-091-066-142">
                     <desc>One small fix.</desc>
+                </change>
+                <change who="#celso" when="2023-11-21T23:26:28.648Z" type="text-version" status="1.0.2" xml:id="UT22084-091-066-143">
+                    <desc>Corrected links to rKTs</desc>
+                </change>
+                <change who="#andre" when="2023-11-29T07:50:11.781Z" type="text-version" status="1.0.3" xml:id="UT22084-091-066-144">
+                    <desc>glossary integration in CG revised - activated</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -502,9 +508,9 @@
                                                   Unit, Central Institute of Higher Tibetan Studies,
                                                   1993. </bibl>
                                                 <bibl xml:id="UT22084-091-066-96">
-                            <title xml:lang="en">Resources for Kanjur &amp; Tenjur
+                            <title xml:lang="en">Resources for Kanjur and Tanjur
                                                   Studies</title>, Universität Wien, accessed June
-                                                  11, 2019. <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php">https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php</ref>.</bibl>
+                                                        11, 2019. <ref target="http://www.rkts.org/">http://www.rkts.org</ref>.</bibl>
                                                 <bibl xml:id="UT22084-091-066-97">
                             <title xml:lang="en">The Buddhist Canons Research
                                                   Database</title>. American Institute of Buddhist
@@ -517,7 +523,7 @@
                                         </div>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                                                 <gloss type="person" xml:id="UT22084-091-066-139">
