--- a/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -34,7 +34,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -200,6 +200,9 @@
                 </change>
                 <change who="#andre" when="2023-11-28T08:57:22.265Z" type="text-version" status="1.0.4" xml:id="UT22084-091-067-150">
                     <desc>A couples of typos have been fixed.</desc>
+                </change>
+                <change who="#andre" when="2023-11-29T08:00:04.269Z" type="text-version" status="1.0.5" xml:id="UT22084-091-067-151">
+                    <desc>glossary integration in CG revised - activated</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -534,7 +537,7 @@
                                         </div>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-067-106">
