--- a/translations/kangyur/translations/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
+++ b/translations/kangyur/translations/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-100-047-82">Nathaniel Rich</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -161,6 +161,9 @@
                 </change>
                 <change who="#john" when="2023-11-16T11:39:55.304Z" type="text-version" status="1.1.1" xml:id="UT22084-100-047-88">
                     <desc>First prose line of the translation changed (in consultation with Catherine).</desc>
+                </change>
+                <change who="#andre" when="2023-11-29T08:16:12.681Z" type="text-version" status="1.1.2" xml:id="UT22084-100-047-89">
+                    <desc>glossary integration in CG revised - activated</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -392,7 +395,7 @@
                                                 Hungarian Academy of Sciences</title>. Budapest: Library of the Hungarian Academy of Sciences, 2010. </bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-100-047-39">
