--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -8,20 +8,21 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Sumāgadhāvadāna</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ma ga d+hA bzang mo'i rtogs pa brjod pa/</title>
                 <author role="translatorMain" xml:id="UT22084-075-004-1">Sakya Pandita Translation Group</author>
-                <consultant role="projectManager" xml:id="UT22084-075-004-2">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" xml:id="UT22084-075-004-3">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="dharmaMaster" xml:id="UT22084-075-004-4">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-075-004-2">Chodrungma Kunga Chodron </consultant>
+                <author role="translatorEng" xml:id="UT22084-075-004-3">Chodrungma Kunga Chodron </author>
+                <consultant role="dharmaMaster" xml:id="UT22084-075-004-4">Khenpo Kalsang Gyaltsen</consultant>
                 <editor role="projectEditor" xml:id="UT22084-075-004-5">Laura Goetz</editor>
-                <author role="translatorEng" xml:id="UT22084-075-004-6">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-075-004-6">Khenpo Kalsang Gyaltsen</author>
                 <editor role="projectEditor" xml:id="UT22084-075-004-21">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-075-004-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-075-004"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +76,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-27T11:52:03.573Z" type="text-version" status="0.0.9" xml:id="UT22084-075-004-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-27T11:53:33.74Z" type="text-version" status="0.0.10" xml:id="UT22084-075-004-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T09:28:46.44Z" type="translation-status" status="2.d" xml:id="UT22084-075-004-36">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T09:28:46.44Z" type="text-version" status="0.0.11" xml:id="UT22084-075-004-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
