--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-062-015-37">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-062-015"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-06T16:26:56.632Z" type="text-version" status="0.0.12" xml:id="UT22084-062-015-40">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T09:53:28.94Z" type="translation-status" status="2.c" xml:id="UT22084-062-015-41">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T09:53:28.94Z" type="text-version" status="0.0.13" xml:id="UT22084-062-015-42">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
