--- a/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
+++ b/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
@@ -5,27 +5,28 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Patience with the Discipline Through Practicing in a Way that is Like The Colour of the Sky</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samyagācāravṛtta­gaganavarṇavinaya­kṣāntisūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Samyagācāravṛtta­gaganavarṇavinaya­kṣāntisūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">yang dag par spyod tshul nam mkha'i mdog gis 'dul ba'i bzod pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasamyagācāravṛtta­gaganavarṇavinayakṣānti­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasamyagācāravṛtta­gaganavarṇavinayakṣānti­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yang dag par spyod pa'i tshul nam mkha'i mdog gis 'dul ba'i bzod pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《正行理趣虛空色調伏忍辱經》</title>
-                <author role="translatorMain" xml:id="UT22084-067-002-2"/>
+                <author role="translatorMain" xml:id="UT22084-067-002-2">Dharmachakra Translation Committee</author>
                 <author role="translatorEng" xml:id="UT22084-067-002-3">Benjamin Collet-Cassart</author>
                 <editor role="reviser" xml:id="UT22084-067-002-4">Adam Krug</editor>
                 <consultant role="projectManager" xml:id="UT22084-067-002-5">Andreas Doctor</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-067-002-6">Chökyi Nyima Rinpoche</consultant>
                 <editor role="projectEditor" xml:id="UT22084-067-002-7">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-067-002-32">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-067-002-8">Wang Jing and Family</sponsor>
                 <sponsor xml:id="UT22084-067-002-9">Chen Yiqiong and Family</sponsor>
                 <sponsor xml:id="UT22084-067-002-10">Gu Yun and  Family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-067-002"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-14T09:14:18.94Z" type="text-version" status="0.0.12" xml:id="UT22084-067-002-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-02T12:25:24.247Z" type="text-version" status="0.0.13" xml:id="UT22084-067-002-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T10:20:07.832Z" type="translation-status" status="2.d" xml:id="UT22084-067-002-34">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T10:20:07.832Z" type="text-version" status="0.0.14" xml:id="UT22084-067-002-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
