--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -17,14 +17,15 @@
                 <author role="translatorEng" xml:id="UT22084-055-002-5">Ani Kunga Chodron</author>
                 <editor role="projectEditor" xml:id="UT22084-055-002-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-055-002-25">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-055-002-38">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-06T11:33:33.416Z" type="text-version" status="0.0.11" xml:id="UT22084-055-002-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T11:34:08.741Z" type="text-version" status="0.0.12" xml:id="UT22084-055-002-39">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T15:00:06.43Z" type="translation-status" status="2.d" xml:id="UT22084-055-002-40">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T15:00:06.43Z" type="text-version" status="0.0.13" xml:id="UT22084-055-002-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
