--- a/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
+++ b/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-062-005-33">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-062-005"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-13T14:29:26.388Z" type="text-version" status="0.0.10" xml:id="UT22084-062-005-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T15:06:39.698Z" type="translation-status" status="2.c" xml:id="UT22084-062-005-37">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T15:06:39.698Z" type="text-version" status="0.0.11" xml:id="UT22084-062-005-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
