--- a/translations/kangyur/translations/072-005_toh305-sutra_of_the_highest_designation.xml
+++ b/translations/kangyur/translations/072-005_toh305-sutra_of_the_highest_designation.xml
@@ -21,7 +21,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-005-155">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -154,6 +154,9 @@
                 </change>
                 <change who="#sameer" when="2023-10-16T10:00:47.401Z" type="text-version" status="1.0.2" xml:id="UT22084-072-005-161">
                     <desc>Included in App v 3.7</desc>
+                </change>
+                <change who="#andre" when="2023-11-30T18:40:05.009Z" type="text-version" status="1.0.3" xml:id="UT22084-072-005-162">
+                    <desc>Glossary revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -531,7 +534,7 @@
             Verlag, 1965.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-072-005-90">
@@ -598,21 +601,13 @@
                         </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-005-98">
+                        <gloss xml:id="UT22084-072-005-98" type="term" mode="match">
                             <term type="translationMain">dharma</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary">dharma</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས།</term>
-                            <note type="definition">
-                                <p>[adapted from Toh 113] A term that predates Buddhism, <foreign xml:lang="Sa-Ltn" type="term">Dharma</foreign>/<foreign xml:lang="Sa-Ltn" type="term">dharma</foreign> has a wide range of meanings and usages in Buddhist
-                texts depending on context:When rendered as the <foreign xml:lang="Sa-Ltn" type="term">Dharma</foreign>, it refers in toto to the teaching of the <ref target="https://read.84000.co/translation/toh113.html#UT22084-051-001-3225">Buddha</ref>
-                <ref target="https://read.84000.co/translation/toh113.html#UT22084-051-001-3555">Śākyamuni</ref> and other buddhas, preached by their followers, and transmitted in the form of
-                scripture; and, in addition, the nature of reality itself, the referent of the
-                Buddha’s teaching, and also what is realized through it. When rendered as <foreign xml:lang="Sa-Ltn" type="term">dharma</foreign> or <foreign xml:lang="Sa-Ltn" type="term">dharmas</foreign>, it can refer variously to the different teachings
-                                  given by the Buddha Śākyamuni, other buddhas, and their followers; the trainings enjoined in those teachings;
-                the positive qualities acquired through applying those trainings; mental <ref target="https://read.84000.co/translation/toh113.html#UT22084-051-001-3687">phenomena</ref> in general; or phenomena in general or their characteristics. Often in Buddhist
-                literature, and certainly in this sūtra, there is a play on the multiple interlinked
-                senses of this term.</p>
+                            <note type="definition" rend="override">
+                                <p>[adapted from Toh 113] A term that predates Buddhism, <foreign xml:lang="Sa-Ltn" type="term">Dharma</foreign>/<foreign xml:lang="Sa-Ltn" type="term">dharma</foreign> has a wide range of meanings and usages in Buddhist texts depending on context:When rendered as the <foreign xml:lang="Sa-Ltn" type="term">Dharma</foreign>, it refers in toto to the teaching of the <ref target="https://read.84000.co/translation/toh113.html#UT22084-051-001-3225">Buddha</ref> <ref target="https://read.84000.co/translation/toh113.html#UT22084-051-001-3555">Śākyamuni</ref> and other buddhas, preached by their followers, and transmitted in the form of scripture; and, in addition, the nature of reality itself, the referent of the Buddha’s teaching, and also what is realized through it. When rendered as <foreign xml:lang="Sa-Ltn" type="term">dharma</foreign> or <foreign xml:lang="Sa-Ltn" type="term">dharmas</foreign>, it can refer variously to the different teachings given by the Buddha Śākyamuni, other buddhas, and their followers; the trainings enjoined in those teachings; the positive qualities acquired through applying those trainings; mental <ref target="https://read.84000.co/translation/toh113.html#UT22084-051-001-3687">phenomena</ref> in general; or phenomena in general or their characteristics. Often in Buddhist literature, and certainly in this sūtra, there is a play on the multiple interlinked senses of this term.</p>
                             </note>
                         </gloss>
                     </item>
@@ -645,11 +640,14 @@
                         </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-005-103">
+                        <gloss xml:id="UT22084-072-005-103" type="term" mode="match">
                             <term type="translationMain">completely perfect buddha</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary">samyaksaṃbuddha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">yang dag par rdzogs pa’i sangs rgyas</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡང་དག་པར་རྫོགས་པའི་སངས་རྒྱས།</term>
+                            <note type="definition">
+                                <p>The attainment of a buddha, who has gained total freedom from conditioned existence, overcome all tendencies imprinted on the mind as a result of a long association with afflicted mental states, and fully manifested all aspects of buddha body, speech, and mind. Also used to emphasize the superiority of buddhahood when contrasted with the achievement of the arhats and pratyekabuddhas. A <foreign xml:lang="Sa-Ltn">samyaksaṃbuddha</foreign> is considered superior by virtue of his compassionate activity, his omniscience, and his ten special powers.</p>
+                            </note>
                         </gloss>
                     </item>
           <item>
