--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -16,12 +16,12 @@
                 <editor role="projectEditor" xml:id="UT22084-061-009-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2023</date>
+                <edition>v 0.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -111,6 +111,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-20T15:02:59.6Z" type="text-version" status="0.0.16" xml:id="UT22084-061-009-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-01T12:05:25.814Z" type="translation-status" status="2.a" xml:id="UT22084-061-009-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-01T12:05:25.814Z" type="text-version" status="0.0.17" xml:id="UT22084-061-009-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
