--- a/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
+++ b/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
@@ -24,7 +24,7 @@
                 <sponsor xml:id="UT22084-061-005-807">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.19 <date>2023</date>
+                <edition>v 1.0.20 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -180,6 +180,9 @@
                     <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
                 </change>
                 <change who="#martina-cotter" when="2023-12-04T09:38:53.916Z" type="text-version" status="1.0.19" xml:id="UT22084-061-005-851">
+                    <desc>Added pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-12-04T10:27:14.985Z" type="text-version" status="1.0.20" xml:id="UT22084-061-005-852">
                     <desc>Added pending links.</desc>
                 </change>
             </revisionDesc>
@@ -1804,9 +1807,7 @@
                                    <bibl xml:id="UT22084-061-005-700">
                             <title xml:lang="Bo-Ltn">blo gros mi zad pas bstan pa</title> (<title xml:lang="Sa-Ltn">Akṣaya­mati­nirdeśa</title>). Toh 175, Degé Kangyur vol. 60 (mdo sde, ma), folios 79.a–174.b. English translation in <ref target="https://read.84000.co/translation/toh175.html">Braarvig, Jens, and David Welsh (2020)</ref>. [Full citation listed in secondary literature]</bibl>
                                      <bibl xml:id="UT22084-061-005-702">
-                            <title xml:lang="Bo-Ltn">byang chub sems dpa’i sde snod</title> (<title xml:lang="Sa-Ltn">
-                                <ref rend="pending" target="https://read.84000.co/translation/toh56.html">Bodhi­sattva­piṭaka</ref>
-                            </title>). Toh 56, Degé Kangyur vol. 40 (dkon brtsegs, kha), folios 255.b–294.a and vol. 41 (dkon brtsegs, ga), folios 1.b–205.b. English translation in 
+                            <title xml:lang="Bo-Ltn">byang chub sems dpa’i sde snod</title> (<title xml:lang="Sa-Ltn">Bodhi­sattva­piṭaka</title>). Toh 56, Degé Kangyur vol. 40 (dkon brtsegs, kha), folios 255.b–294.a and vol. 41 (dkon brtsegs, ga), folios 1.b–205.b. English translation in 
                                          <ref target="https://read.84000.co/translation/toh56.html">Norwegian Institute of Palaeography and Historical Philology 2023</ref>.</bibl>              
                                    <bibl xml:id="UT22084-061-005-705">
                             <title xml:lang="Bo-Ltn">bzang spyod smon lam</title> (<title xml:lang="Sa-Ltn">
