--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -5,10 +5,10 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Prophecy for the Magician Bhadra</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bhadramāyākaravyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Bhadramāyākaravyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma mkhan bzang po lung bstan pa'i mdo/</title>
                 <title type="mainTitle" xml:lang="zh">《幻師仁賢授記經》(大正藏:《大寶積經授幻師跋陀羅記會第二十一》</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabhadra­māyākaravyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryabhadra­māyākaravyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgyu ma mkhan bzang po lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-043-002-1">Kirtimukha Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-002-2">Celso Wilkinson</author>
@@ -22,12 +22,12 @@
                 <editor role="copyEditor" xml:id="UT22084-043-002-32">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2023</date>
+                <edition>v 0.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-043-002"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-09T07:01:08.556Z" type="text-version" status="0.1.10" xml:id="UT22084-043-002-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-04T12:04:39.021Z" type="translation-status" status="2.a" xml:id="UT22084-043-002-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-04T12:04:39.021Z" type="text-version" status="0.1.11" xml:id="UT22084-043-002-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
