--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -17,12 +17,12 @@
                 <editor role="copyEditor" xml:id="UT22084-075-004-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-075-004"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +85,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-29T09:28:46.44Z" type="text-version" status="0.0.11" xml:id="UT22084-075-004-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-05T08:59:17.256Z" type="translation-status" status="2.c" xml:id="UT22084-075-004-38">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-05T08:59:17.256Z" type="text-version" status="0.0.12" xml:id="UT22084-075-004-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
