--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -5,19 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Tantra of Black Yamāri</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kṛṣnayamāritantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Kṛṣnayamāritantra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed nag po'i rgyud/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāga­takāyavakcittakṛṣna­yamārināmatantra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāga­takāyavakcittakṛṣna­yamārināmatantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi sku gsung thugs gshin rje gshed nag po zhes bya ba'i rgyud/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-083-015-1"/>
+                <author role="translatorEng" xml:id="UT22084-083-015-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-083-015"/>
                 <date/>
             </publicationStmt>
@@ -32,17 +33,42 @@
                     <idno source-id="O1JC114941JC12179" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:14:36.612Z" user="admin">30/06/2022 13:14:36</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="4" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:13:36.277Z" user="line-tofte"/>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:13:36.277Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-06-30T13:14:28.686Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-083-015-3">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T14:25:10.944Z" type="translation-status" status="4" xml:id="UT22084-083-015-4">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T14:25:10.944Z" type="text-version" status="0.0.2" xml:id="UT22084-083-015-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-16T13:13:36.277Z" type="translation-status" status="" xml:id="UT22084-083-015-6">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2021-09-16T13:13:36.277Z" type="text-version" status="0.0.3" xml:id="UT22084-083-015-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:13:56.02Z" type="translation-status" status="3" xml:id="UT22084-083-015-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:13:56.02Z" type="text-version" status="0.0.4" xml:id="UT22084-083-015-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:14:28.686Z" type="text-version" status="0.0.5" xml:id="UT22084-083-015-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-083-015-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-05T10:44:25.77Z" type="translation-status" status="2.h" xml:id="UT22084-083-015-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-05T10:44:25.77Z" type="text-version" status="0.0.7" xml:id="UT22084-083-015-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
