--- a/translations/kangyur/translations/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/translations/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-030-195">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -158,6 +158,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-12-06T11:20:59.47Z" type="text-version" status="1.0.0" xml:id="UT22084-072-030-198">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-12-06T11:30:33.911Z" type="text-version" status="1.0.1" xml:id="UT22084-072-030-199">
+                    <desc>updated typo in bib.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -737,14 +740,7 @@
                                 <div type="section" xml:id="UT22084-072-030-listBibl-2">
                                         <head type="section" tid="50">Sanskrit</head>
                                         <bibl xml:id="UT22084-072-030-125">Braarvig, Jens, ed.
-                                                   “<ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263">Mahāvyutpatti</ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263"> with </ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263">sGra</ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263"> </ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263">sbyor</ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263"> bam po </ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263">gñis</ref>
-                        <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263"> pa</ref>.” Bibliotheca Polyglotta, University of
+                                                 “<ref target="https://www2.hf.uio.no/polyglotta/index.php?page=volume&amp;vid=263">Mahāvyutpatti with sGrasbyor bam po gñis pa</ref>.” Bibliotheca Polyglotta, University of
                                                 Oslo. </bibl>
                                         <bibl xml:id="UT22084-072-030-126">Matsumura, Hisashi
                                                 (1982). “Devatāsūtra と Alpadevatāsūtra.” <title xml:lang="en">Journal of Indian and Buddhist
