--- a/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -4,27 +4,26 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <!--<title type="otherTitle" xml:lang="Sa-Ltn">[Note: Degé, Yongle, and Peking have gaṇu-ālaṃkārāgra°]</title>-->
-        <title type="mainTitle" xml:lang="Bo-Ltn">sdong po rgyan gyi mchog gi gzungs</title>
-        <title type="mainTitle" xml:lang="bo">སྡོང་པོ་རྒྱན་གྱི་མཆོག་གི་གཟུངས།</title>
-        <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Supreme Stem Ornament</title>
-        <title type="mainTitle" xml:lang="Sa-Ltn">Gaṇyālaṃkārāgra­dhāraṇī</title>
-        <title type="longTitle" xml:lang="bo">འཕགས་པ་སྡོང་པོ་རྒྱན་གྱི་མཆོག་ཅེས་བྱ་བའི་གཟུངས།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sdong po rgyan gyi mchog ces bya ba’i
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Supreme Stem Ornament</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Gaṇyālaṃkārāgra­dhāraṇī</title>
+                <title type="mainTitle" xml:lang="bo">སྡོང་པོ་རྒྱན་གྱི་མཆོག་གི་གཟུངས།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sdong po rgyan gyi mchog gi gzungs</title>
+                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “The Supreme Stem Ornament”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­gaṇyālaṃkārāgranāma­dhāraṇī</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྡོང་པོ་རྒྱན་གྱི་མཆོག་ཅེས་བྱ་བའི་གཟུངས།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sdong po rgyan gyi mchog ces bya ba’i
           gzungs</title>
-        <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “The Supreme Stem Ornament”</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Ārya­gaṇyālaṃkārāgranāma­dhāraṇī</title>
-        <title type="otherTitle" xml:lang="zh"/>
-        <author role="translatorMain" xml:id="UT22084-101-122-58">Translated by Catherine Dalton
+                <author role="translatorMain" xml:id="UT22084-101-122-58">Translated by Catherine Dalton
           under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
-        <author role="translatorEng" xml:id="UT22084-101-122-59">Catherine Dalton</author>
-        <editor role="projectEditor" xml:id="UT22084-101-122-60">John Canti</editor>
-        <editor role="copyEditor" xml:id="UT22084-101-122-61">Dawn Collins</editor>
-        <editor role="TEImarkupEditor" xml:id="UT22084-101-122-62">Martina Cotter</editor>
-        <editor role="projectEditor" xml:id="UT22084-101-122-63">George FitzHerbert</editor>
-      </titleStmt>
+                <author role="translatorEng" xml:id="UT22084-101-122-59">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-101-122-60">John Canti</editor>
+                <editor role="copyEditor" xml:id="UT22084-101-122-61">Dawn Collins</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-101-122-62">Martina Cotter</editor>
+                <editor role="projectEditor" xml:id="UT22084-101-122-63">George FitzHerbert</editor>
+                <editor role="finalReviewer" xml:id="UT22084-101-122-96">Andreas Doctor</editor>
+            </titleStmt>
       <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -32,7 +31,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -119,6 +118,15 @@
                 <change who="#line-tofte" when="2023-08-21T07:23:22.435Z" type="text-version" status="0.0.5" xml:id="UT22084-101-122-89">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2023-12-04T15:20:18.602Z" type="text-version" status="0.0.6" xml:id="UT22084-101-122-97">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-12-06T12:13:13.658Z" type="translation-status" status="1.a" xml:id="UT22084-101-122-98">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-12-06T12:13:13.658Z" type="text-version" status="1.0.0" xml:id="UT22084-101-122-99">
+                    <desc>First published version</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -138,10 +146,12 @@
       <div type="acknowledgment">
         <head type="acknowledgment" tid="3">Acknowledgements</head>
         <milestone unit="chunk" xml:id="UT22084-101-122-2"/>
-        <p tid="4">This text was translated by Catherine Dalton and edited by the 84000 editorial
-          team.</p>
-        <p tid="5">The translation was completed under the patronage and supervision of 84000:
-          Translating the Words of the Buddha.</p>
+        <p tid="4">This publication was completed under the patronage and supervision of 84000: Translating
+          the Words of the Buddha.</p>
+        <p tid="5">The text was translated, edited, and introduced by the 84000 translation team.
+          Catherine Dalton produced the translation and wrote the introduction. George FitzHerbert edited the translation and the introduction, and
+          Dawn Collins copyedited the text. Martina Cotter was in charge of the digital
+          publication process.</p>
         <lb/>
       </div>
       <div type="introduction">
@@ -263,7 +273,7 @@
           <milestone unit="chunk" xml:id="UT22084-101-122-20"/>
           <p tid="16">The present English translation of <title xml:lang="en">The Dhāraṇī of the
               Supreme Stem Ornament</title> was made from the Tibetan as found in the Degé Kangyur
-            recension of the work, in consultation with the notes in the <title xml:lang="en">Comparative Edition</title> (<title xml:lang="Bo-Ltn">dpe sdur ma</title>). </p>
+            recension of the work, in consultation with the notes in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>). </p>
         </div>
       </div>
     </front>
@@ -493,26 +503,16 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="person" xml:id="UT22084-101-122-55">
-              <term type="translationMain">malevolent female spirit</term>
-              <term type="translationAlternative">malevolent female spirits</term>
-              <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">ḍākinī</term>
-              <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">phra men
-                ma</term>
-              <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཕྲ་མེན་མ།</term>
-              <note type="definition">
-                <p>The term <foreign xml:lang="Bo-Ltn" type="term">phra men ma</foreign> (also
-                  spelled <foreign xml:lang="Bo-Ltn">phra man ma</foreign> in some texts) is one of
-                  the two translations of the word <foreign xml:lang="Sa-Ltn" type="term">ḍākinī</foreign> found in canonical works. In this case—as in many of the cases
-                  where <foreign xml:lang="Bo-Ltn" type="term">phra men ma </foreign>rather than the
-                  other Tibetan translation of <foreign xml:lang="Sa-Ltn" type="term">ḍākinī</foreign>, <foreign xml:lang="Bo-Ltn" type="term">mkha’ ’gro
-                    ma</foreign> is employed—it refers to a class of malevolent female spirits. The
-                  higher tantras of the Nyingma tradition feature <foreign xml:lang="Bo-Ltn" type="term">phra men</foreign> (<foreign xml:lang="Bo-Ltn" type="term">ma</foreign>) as a class of protective deities on the periphery of the maṇḍala
-                  of wrathful deities in the Shitro (<foreign xml:lang="Bo-Ltn" type="term">zhi
-                    khro</foreign>) maṇḍala of peaceful and wrathful deities. They have female
-                  bodies, animal heads, and often appear as a set of eight.</p>
-              </note>
-            </gloss>
+                        <gloss xml:id="UT22084-101-122-55" type="term" mode="match">
+                            <term type="translationMain">malevolent female spirit</term>
+                            <term type="translationAlternative">malevolent female spirits</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">ḍākinī</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">phra men ma</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཕྲ་མེན་མ།</term>
+                            <note type="definition">
+                                <p>The term <foreign xml:lang="Bo-Ltn" type="term">phra men ma</foreign> (also spelled <foreign xml:lang="Bo-Ltn">phra man ma</foreign> in some texts) is one of the two translations of the word <foreign xml:lang="Sa-Ltn" type="term">ḍākinī</foreign> found in canonical works. In this case—as in many of the cases where <foreign xml:lang="Bo-Ltn" type="term">phra men ma </foreign>rather than the other Tibetan translation of <foreign xml:lang="Sa-Ltn" type="term">ḍākinī</foreign>, <foreign xml:lang="Bo-Ltn" type="term">mkha’ ’gro ma</foreign> is employed—it refers to a class of malevolent female spirits. The higher tantras of the Nyingma tradition feature <foreign xml:lang="Bo-Ltn" type="term">phra men</foreign> (<foreign xml:lang="Bo-Ltn" type="term">ma</foreign>) as a class of protective deities on the periphery of the maṇḍala of wrathful deities in the Shitro (<foreign xml:lang="Bo-Ltn" type="term">zhi khro</foreign>) maṇḍala of peaceful and wrathful deities. They have female bodies, animal heads, and often appear as a set of eight.</p>
+                            </note>
+                        </gloss>
                     </item>
         </list>
       </div>
